--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
                 </ul>
             </div>
 
-            <h5 class="profile-aboutme">Saludos, soy un ingeniero en sistemas informáticos,
-                académicamente me inicié en el mundo de la tecnología hace 5 años,
-                en el cual desarrollé gran colaboración de trabajo en equipo con mis compañeros de la universidad,
-                crecimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos y evaluaciones,
+            <h5 class="profile-aboutme">Saludos, soy un ingeniero en sistemas informáticos, tengo
+                conocimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos y evaluaciones,
                 vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql,
                 obteniendo un crecimiento paulatino en el desarrollo de software.</h5>
             <div class="profile__info ">
