--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
             </div>
 
-            <h5 class="profile-aboutme">Saludos, soy un ingeniero en sistemas informáticos, tengo
+            <h5 class="profile-aboutme">Saludos, tengo
                 conocimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos y evaluaciones,
                 vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql,
                 obteniendo un crecimiento paulatino en el desarrollo de software.</h5>
@@ -171,7 +171,33 @@
                         </div>
                     </article>
 
+                    <article class="projects__card">
+                        <img src="./Img/ALURA Latam.png" alt="" class="projects__img">
 
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Test Alura Latam</h3>
+                                <a href="https://alura-test-encriptador.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="projects__card">
+                        <img src="./Img/Ing Wanner.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Service WSD</h3>
+                                <a href="https://wsd-service.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
                 </div>
 
                 <!-- SKILLS  START-->
