--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 </ul>
             </div>
 
-            <h5 class="profile-aboutme">Saludos, tengo
-                conocimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos y evaluaciones,
-                vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql,
-                obteniendo un crecimiento paulatino en el desarrollo de software.</h5>
+            <h5 class="profile-aboutme">Saludos, soy un Ingeniero en Sistemas Informáticos, académicamente me inicié en el mundo de la tecnología hace 5 años,
+                 en el cual desarrollé gran colaboración de trabajo en equipo con mis compañeros de la universidad,
+                  crecimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos evaluaciones, vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql, obteniendo un crecimiento paulatino en el desarrollo de software, dispuesto a seguir aprendiendo y aportando mi visión, trabajo e ideas.
+                Actualmente he desarrollado pequeños proyectos web personales, para ampliar conocimientos en desarrollo web, a lo largo de los años he adquirido habilidades como: Atención al cliente, analítico, respetuoso, trabajo en equipo, comunicativo, optimista, positivo, capacidad de aprendizaje, manejo de conflictos.</h5>
             <div class="profile__info ">
                 <!-- <div class="profile__info-group">
                     <h3 class="profile__info-number">7</h3>
@@ -71,8 +71,7 @@
                 </div> -->
             </div>
 
-            <div class="profile__buttons">
-                <!-- Insert your CV -->
+        <!---    <div class="profile__buttons">
                 <a download="" href="./Kevin López MezaCVE.pdf" class="button">
                     Download CV in English <i class="ri-download-line"></i>
                 </a>
@@ -82,15 +81,14 @@
                 </a>
 
                 <div class="profile__buttons-small">
-                    <!-- Insert a real number plus country code -->
                     <a href="https://api.whatsapp.com/send?phone=50670488299&text=Hello, more information!"
                         target="_blank" class="button button__small button__gray">
                         <i class="ri-whatsapp-line"></i>
                     </a>
-                    <!-- Insert your brand name or profile -->
+                    
 
                 </div>
-            </div>
+            </div>   ---->
         </div>
     </header>
 
