--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <ul class="profile__social">
 
-                    <a href="https://www.linkedin.com/in/kevin-hayver-l%C3%B3pez-meza-5b3a3a213?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B2fzWBSV5RB6700rwqOnpmw%3D%3D"
+                    <a href="https://www.linkedin.com/in/kevin-l%C3%B3pez-meza-5b3a3a213/"
                         target="_blank" class="profile__social-link">
                         <i class="ri-linkedin-box-line"></i>
                     </a>
