--- a/index.html
+++ b/index.html
@@ -196,6 +196,34 @@
                             </div>
                         </div>
                     </article>
+                    
+                    <article class="projects__card">
+                        <img src="./Img/Weight Tracker.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Weight Tracker Demo</h3>
+                                <a href="https://weighttracker77.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="projects__card">
+                        <img src="./Img/Searcher Pokemons.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Search Pokemons</h3>
+                                <a href="https://searchpokemons777.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
                 </div>
 
                 <!-- SKILLS  START-->
