--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">Search Pokemons</h3>
+                                <h3 class="projects__title">Searcher Pokemons</h3>
                                 <a href="https://searchpokemons777.netlify.app/" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
