mailto update and button tabs

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
                             </div>
@@ -267,7 +267,7 @@
                                     
                                     <div>
                                         <h3 class="skills__name">Vue.js</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
 
@@ -320,7 +320,7 @@
                                     <i class="ri-checkbox-circle-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">Firebase</h3>
+                                        <h3 class="skills__name">Node.js</h3>
                                         <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
@@ -341,7 +341,7 @@
 
                                     <div>
                                         <h3 class="skills__name">C# - ASP.NET</h3>
-                                        <span class="skills__level">Intermediate</span>
+                                        <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
 
@@ -372,7 +372,7 @@
         </div>
         <div class="copyright container">
             <i class='bx bxl-gmail'></i>
-            <p>Correo: kevjob826@gmail.com</p>
+            <p><a href="mailto:kevjob826@gmail.com" class="email">Correo: kevjob826@gmail.com</a></p>
 
         </div>
     </footer>
