--- a/index.html
+++ b/index.html
@@ -224,6 +224,34 @@
                             </div>
                         </div>
                     </article>
+
+                    <article class="projects__card">
+                        <img src="./Img/Appbudget.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Budget App</h3>
+                                <a href="https://presupuestoapp12.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="projects__card">
+                        <img src="./Img/Game tictactoe.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Tic tac toe Game</h3>
+                                <a href="https://game-tictactoedev.netlify.app/" class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
                 </div>
 
                 <!-- SKILLS  START-->
