Add new about me and off animation

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.1.0/swiper-bundle.min.js"
-        integrity="sha512-Z24NgOqNs3e9xPPWyVl6bGugynX7N5rIWTiwpvdu2UXIAs8hRXdA7Qdk5EwtxylY/kVL2ie40g4hkClbVTh0iA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <link rel="stylesheet" href="./Css/styles.css">
-    <title>Developer Kevin</title>
+    <title>Developer Kevin | KevDev </title>
 </head>
 
 <body>
@@ -49,9 +43,14 @@
             </div>
 
             <h5 class="profile-aboutme">
-                Soy un Ingeniero de sistemas informáticos, cuento con habilidades cómo: trabajo en equipo,
-                resolución de conflictos, comunicación, organización, también tengo experiencia en servicio al cliente,
-                gestión y análisis de riesgo, control de riesgos, análisis de datos por medio de la herramienta IDEA.
+                Soy un profesional graduado de Ingeniería de Sistemas Informáticos.
+                Mi trayectoria comienza hace 6 años,
+                en la universidad comencé a trabajar en proyectos de aplicaciones de escritorio con Java y C#,
+                conforme avancé en mi aprendizaje empecé a realizar proyectos Web empezando con HTML, CSS y Javascript.
+                En el presente me encuentro aprendiendo Python con librerias como pandas y Seaborn, para el análisis de
+                datos,
+                Tengo conocimiento con las bases de datos de: Mysql y SQLServer.
+
             </h5>
             <div class="profile__info ">
                 <!-- <div class="profile__info-group">
@@ -426,11 +425,8 @@
 
         </div>
     </footer>
-
     <!-- SCROLLREVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
-
-
     <!-- MAIN JS-->
     <script src="./js/index.js"></script>
 </body>
