--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="profile__border">
                     <div class="profile__perfil">
                         <!-- Insert your image, according to the example size of the portfolio -->
-                        <img src="./img/kev.jpg" alt="">
+                        <img src="./img/kev.jpg" alt="portafolio imagen de perfil kevin lopez meza">
                     </div>
                 </div>
 
@@ -110,7 +110,7 @@
                 <div class="projects__content grid filters__active" data-content id="projects">
                     <article class="projects__card">
                         <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                        <img src="./Img/1.png" alt="" class="projects__img">
+                        <img src="./Img/1.png" alt="Sitio web de visualizacion cripto monedas" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -125,7 +125,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/2.png" alt="" class="projects__img">
+                        <img src="./Img/2.png" alt="Sitio web de datos covid global" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -140,7 +140,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/3.png" alt="" class="projects__img">
+                        <img src="./Img/3.png" alt="Aplicacion web de tareas por hacer" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -155,7 +155,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/5.png" alt="" class="projects__img">
+                        <img src="./Img/5.png" alt="Sitio web de compra de NFT" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -169,7 +169,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/ALURA Latam.png" alt="" class="projects__img">
+                        <img src="./Img/ALURA Latam.png" alt="Sitio web de codificacion de palabra" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -184,7 +184,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Ing Wanner.png" alt="" class="projects__img">
+                        <img src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -199,7 +199,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Weight Tracker.png" alt="" class="projects__img">
+                        <img src="./Img/Weight Tracker.png" alt="Sitio web de seguimiento de peso" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -214,7 +214,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Searcher Pokemons.png" alt="" class="projects__img">
+                        <img src="./Img/Searcher Pokemons.png" alt="Aplicacion web de consulta de pokemones" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -229,7 +229,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Appbudget.png" alt="" class="projects__img">
+                        <img src="./Img/Appbudget.png" alt="Aplicacion web de calculo de presupuesto" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -244,7 +244,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Game tictactoe.png" alt="" class="projects__img">
+                        <img src="./Img/Game tictactoe.png" alt="Aplicacion web de juego" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -259,7 +259,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/text-to-speech.png" alt="" class="projects__img">
+                        <img src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
