SEO1.2, css font size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <h2 class="profile__name">Kevin López Meza</h2>
-                <h4 class="profile__profession">Software Engineer, Jr Front-end Developer</h4>
+                <h4 class="profile__profession">Software Engineer | Jr Frontend Developer</h4>
                 <!-- <h6>Saludos, soy un ingeniero en sistemas informáticos, académicamente me inicié en el mundo de la tecnología hace 5 años, en el cual desarrollé gran colaboración de trabajo en equipo con mis compañeros de la universidad, crecimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos evaluaciones, vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql, obteniendo un crecimiento paulatino en el desarrollo de software.</h6> -->
 
                 <ul class="profile__social">
