--- a/index.html
+++ b/index.html
@@ -108,21 +108,7 @@
             <div class="filters__sections">
                 <!-- PROJECTS -->
                 <div class="projects__content grid filters__active" data-content id="projects">
-                    <article class="projects__card">
-                        <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                        <img src="./Img/1.png" alt="Sitio web de visualizacion cripto monedas" class="projects__img">
-
-                        <div class="projects__modal">
-                            <div>
-                                <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">Crypto Site</h3>
-                                <a href="https://criptoapp77.netlify.app/"
-                                    class="projects__button button button__small">
-                                    <i class="ri-link"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </article>
+                   
 
                     <article class="projects__card">
                         <img src="./Img/2.png" alt="Sitio web de datos covid global" class="projects__img">
@@ -214,13 +200,13 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Searcher Pokemons.png" alt="Aplicacion web de consulta de pokemones" class="projects__img">
+                        <img src="./Img/Usersreqresapi.png" alt="Api de consulta de usuarios" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">Searcher Pokemons</h3>
-                                <a href="https://searchpokemons777.netlify.app/"
+                                <h3 class="projects__title">Users Reqres Api</h3>
+                                <a href="https://apiusers-77.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
