add meta tags, change remixicon 3.3

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.3.0/remixicon.css"
+        integrity="sha512-0JEaZ1BDR+FsrPtq5Ap9o05MUwn8lKs2GiCcRVdOH0qDcUcCoMKi8fDVJ9gnG8VN1Mp/vuWw2sMO0SQom5th4g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./Css/styles.css">
+    <meta name="author" content="Kevin López Meza | KevDev">
+    <meta name="description" content="Portafolio de Kevin Lopez Meza, muestra los proyectos
+    creados a lo largo de su carrera basado en tecnologías web">
+
+
     <title>Developer Kevin | KevDev </title>
 </head>
 
@@ -26,7 +33,7 @@
                 </div>
 
                 <h2 class="profile__name">Kevin López Meza</h2>
-                <h4 class="profile__profession">Software Engineer | Jr Frontend Developer</h4>
+                <h4 class="profile__profession">Software Engineer | Frontend Developer Jr</h4>
                 <!-- <h6>Saludos, soy un ingeniero en sistemas informáticos, académicamente me inicié en el mundo de la tecnología hace 5 años, en el cual desarrollé gran colaboración de trabajo en equipo con mis compañeros de la universidad, crecimiento en tecnologías como: Java, C# con proyectos basados en los requerimientos académicos evaluaciones, vinculado a sistemas de gestión de bases de datos como SQL Server y Mysql, obteniendo un crecimiento paulatino en el desarrollo de software.</h6> -->
 
                 <ul class="profile__social">
@@ -48,7 +55,7 @@
                 conforme avancé en mi aprendizaje empecé a realizar proyectos Web empezando con HTML, CSS y Javascript.
                 En el presente me encuentro aprendiendo Python con librerias como pandas y Seaborn, para el análisis de
                 datos,
-                Tengo conocimiento con las bases de datos de: Mysql y SQLServer.
+                Tengo conocimiento con los gestores de bases de datos: Mysql y SQLServer.
 
             </h5>
             <div class="profile__info ">
@@ -108,7 +115,7 @@
             <div class="filters__sections">
                 <!-- PROJECTS -->
                 <div class="projects__content grid filters__active" data-content id="projects">
-                   
+
 
                     <article class="projects__card">
                         <img src="./Img/2.png" alt="Sitio web de datos covid global" class="projects__img">
@@ -155,7 +162,8 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/ALURA Latam.png" alt="Sitio web de codificacion de palabra" class="projects__img">
+                        <img src="./Img/ALURA Latam.png" alt="Sitio web de codificacion de palabra"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -170,7 +178,8 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz" class="projects__img">
+                        <img src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -185,7 +194,8 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Weight Tracker.png" alt="Sitio web de seguimiento de peso" class="projects__img">
+                        <img src="./Img/Weight Tracker.png" alt="Sitio web de seguimiento de peso"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -215,7 +225,8 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Appbudget.png" alt="Aplicacion web de calculo de presupuesto" class="projects__img">
+                        <img src="./Img/Appbudget.png" alt="Aplicacion web de calculo de presupuesto"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -245,7 +256,8 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz" class="projects__img">
+                        <img src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -286,7 +298,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="ri-javascript-fill"></i>
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
@@ -297,16 +309,16 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-vuejs-line"></i>
+                                    <i class="ri-reactjs-line"></i>
 
                                     <div>
-                                        <h3 class="skills__name">Vue.js</h3>
+                                        <h3 class="skills__name">React.js</h3>
                                         <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="ri-bootstrap-fill"></i>
 
                                     <div>
                                         <h3 class="skills__name">Bootstrap</h3>
@@ -342,7 +354,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="ri-database-2-fill"></i>
 
                                     <div>
                                         <h3 class="skills__name">MySQL</h3>
@@ -362,7 +374,7 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="ri-database-2-fill"></i>
 
                                     <div>
                                         <h3 class="skills__name">SQLServer</h3>
