add new function countUp

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="profile__info ">
                
                 <div class="profile__info-group">
-                    <h3 class="profile__info-number">+45</h3>
+                    <h3 class="profile__info-number" ></h3>
                     <p class="profile__info-description">
                         Projects <br>
                     </p>
@@ -197,13 +197,13 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Game tictactoe.png" alt="Aplicacion web de juego" class="projects__img">
+                        <img src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Tic tac toe Game</h3>
-                                <a href="https://game-tictactoedev.netlify.app/"
+                                <a href="https://tic-tac-toe-77.netlify.app"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
