--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="profile__border">
                     <div class="profile__perfil">
                         <!-- Insert your image, according to the example size of the portfolio -->
-                        <img src="./img/kev.jpg" alt="portafolio imagen de perfil kevin lopez meza">
+                        <img loading="lazy" src="./img/kev.jpg" alt="portafolio imagen de perfil kevin lopez meza">
                     </div>
 
                 </div>
@@ -92,7 +92,7 @@
                 <div class="projects__content grid filters__active" data-content id="projects">
 
                     <article class="projects__card">
-                        <img src="./Img/3.png" alt="Aplicacion web de tareas por hacer" class="projects__img">
+                        <img loading="lazy" src="./Img/3.png" alt="Aplicacion web de tareas por hacer" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -107,7 +107,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/5.png" alt="Sitio web de compra de NFT" class="projects__img">
+                        <img loading="lazy" src="./Img/5.png" alt="Sitio web de compra de NFT" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -121,7 +121,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/ALURA Latam.png" alt="Sitio web de codificacion de palabra"
+                        <img loading="lazy" src="./Img/ALURA Latam.png" alt="Sitio web de codificacion de palabra"
                             class="projects__img">
 
                         <div class="projects__modal">
@@ -137,7 +137,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz"
+                        <img loading="lazy" src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz"
                             class="projects__img">
 
                         <div class="projects__modal">
@@ -153,7 +153,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Weight Tracker.png" alt="Sitio web de seguimiento de peso"
+                        <img loading="lazy" src="./Img/Weight Tracker.png" alt="Sitio web de seguimiento de peso"
                             class="projects__img">
 
                         <div class="projects__modal">
@@ -169,7 +169,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Usersreqresapi.png" alt="Api de consulta de usuarios" class="projects__img">
+                        <img loading="lazy" src="./Img/Usersreqresapi.png" alt="Api de consulta de usuarios" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -184,7 +184,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Appbudget.png" alt="Aplicacion web de calculo de presupuesto"
+                        <img loading="lazy" src="./Img/Appbudget.png" alt="Aplicacion web de calculo de presupuesto"
                             class="projects__img">
 
                         <div class="projects__modal">
@@ -200,7 +200,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego" class="projects__img">
+                        <img loading="lazy" src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
@@ -215,7 +215,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz"
+                        <img loading="lazy" src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz"
                             class="projects__img">
 
                         <div class="projects__modal">
