--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.3.0/remixicon.css"
         integrity="sha512-0JEaZ1BDR+FsrPtq5Ap9o05MUwn8lKs2GiCcRVdOH0qDcUcCoMKi8fDVJ9gnG8VN1Mp/vuWw2sMO0SQom5th4g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="Img/KevDevlogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./Css/styles.css">
     <meta name="author" content="Kevin López Meza | KevDev">
     <meta name="description" content="Portafolio de Kevin Lopez Meza, muestra los proyectos
