--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@
                 <div class="projects__content grid filters__active" data-content id="projects">
 
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/3.png" alt="Aplicacion web de tareas por hacer" class="projects__img">
+                        <img loading="lazy" src="./Img/3.png" alt="Aplicacion web de tareas por hacer"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">To Do List App</h3>
+                                <span class="tech">HTML</span>
+                                <span class="tech">CSS</span>
+                                <span class="tech">Javascript</span>
                                 <a href="https://worklist-777.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -114,6 +118,9 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">DEMO KEVNFT App</h3>
+                                <span class="tech">HTML</span>
+                                <span class="tech">CSS</span>
+                                <span class="tech">Javascript</span>
                                 <a href="https://kevnftpage.netlify.app/" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -129,6 +136,9 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Test Alura Latam</h3>
+                                <span class="tech">HTML</span>
+                                <span class="tech">CSS</span>
+                                <span class="tech">Javascript</span>
                                 <a href="https://alura-test-encriptador.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -138,14 +148,15 @@
                     </article>
 
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/Ing Wanner.png" alt="Sitio web de servicios profesionales Wanner Diaz"
-                            class="projects__img">
-
+                        <img loading="lazy" src="./Img/WSDservice.png"
+                            alt="Sitio web de servicios profesionales Wanner Diaz" class="projects__img">
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Service WSD</h3>
-                                <a href="https://wsd-service.netlify.app/"
+                                <span class="tech">Next</span>
+                                <span class="tech">Chakra UI</span>
+                                <a href="https://wanner-service777.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -161,6 +172,10 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Weight Tracker Demo</h3>
+                                <span class="tech">Vite</span>
+                                <span class="tech">Vue.js</span>
+                                <span class="tech">Chart.js</span>
+
                                 <a href="https://weighttracker77.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -170,12 +185,15 @@
                     </article>
 
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/Usersreqresapi.png" alt="Api de consulta de usuarios" class="projects__img">
+                        <img loading="lazy" src="./Img/Usersreqresapi.png" alt="Api de consulta de usuarios"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
-                                <h3 class="projects__title">Users Reqres Api</h3>
+                                <h3 class="projects__title">Users Reqres API</h3>
+                                <span class="tech">React</span>
+                                <span class="tech">Next</span>
                                 <a href="https://apiusers-77.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -192,6 +210,9 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Budget App</h3>
+                                <span class="tech">HTML</span>
+                                <span class="tech">CSS</span>
+                                <span class="tech">Javascript</span>
                                 <a href="https://presupuestoapp12.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -201,12 +222,15 @@
                     </article>
 
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego" class="projects__img">
+                        <img loading="lazy" src="./Img/Tictactoe-react.png" alt="Aplicacion web de juego"
+                            class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Tic tac toe Game</h3>
+                                <span class="tech">React</span>
+                                <span class="tech">Vite</span>
                                 <a href="https://tic-tac-toe-77.netlify.app"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
@@ -214,15 +238,17 @@
                             </div>
                         </div>
                     </article>
-
                     <article class="projects__card">
-                        <img loading="lazy" src="./Img/text-to-speech.png" alt="Aplicacion web que lee lo que se escribe por voz"
-                            class="projects__img">
+                        <img loading="lazy" src="./Img/text-to-speech.png"
+                            alt="Aplicacion web que lee lo que se escribe por voz" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">Text to Speech</h3>
+                                <span class="tech">HTML</span>
+                                <span class="tech">CSS</span>
+                                <span class="tech">Javascript</span>
                                 <a href="https://text-to-speech-kev.netlify.app/"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
