update library icon

--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.3.0/remixicon.css"
-        integrity="sha512-0JEaZ1BDR+FsrPtq5Ap9o05MUwn8lKs2GiCcRVdOH0qDcUcCoMKi8fDVJ9gnG8VN1Mp/vuWw2sMO0SQom5th4g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"> <!-- fontawesome -->
     <link rel="shortcut icon" href="Img/KevDevlogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./Css/styles.css">
     <meta name="author" content="Kevin López Meza | KevDev">
     <meta name="description" content="Portafolio de Kevin Lopez Meza, muestra los proyectos
-    creados a lo largo de su carrera basado en tecnologías web Javascript, HTML, CSS ">
-
-
-    <title>Developer Kevin | KevDev </title>
+    creados con tecnologías web Javascript, HTML, CSS, react ">
+    <title>Desarrollador Kevin | KevDev </title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="profile container">
         <!-- DARK OR LIGHT button -->
-        <i class="ri-moon-line change-theme" id="theme-button"></i>
+        <i class="fa-solid fa-circle-half-stroke change-theme" id="theme-button"></i>
         <div class="name_profession">
             <h2 class="profile__name">Kevin López Meza</h2>
             <h4 class="profile__profession" id="profession"></h4>
@@ -53,12 +49,11 @@
 
             <h5 class="profile-aboutme">
                 Soy un profesional graduado de Ingeniería de Sistemas Informáticos.
-                Mi trayectoria comienza hace 6 años,
+                Mi trayectoria comienza hace 7 años,
                 en la universidad comencé a trabajar en proyectos de aplicaciones de escritorio con Java y C#,
                 conforme avancé en mi aprendizaje empecé a realizar proyectos Web empezando con HTML, CSS y Javascript.
-                En el presente me encuentro aprendiendo Python con librerias como pandas y Seaborn, para el análisis de
-                datos,
-                Tengo conocimiento con los gestores de bases de datos: Mysql y SQLServer.
+                Estoy Aprendiendo React, también me encuentro aprendiendo Python con librerías como Pandas y Seaborn,
+                para el análisis de datos, tengo conocimiento con los gestores de bases de datos: Mysql y SQLServer.
 
             </h5>
             <div class="profile__info ">
@@ -66,7 +61,7 @@
                 <div class="profile__info-group">
                     <h3 class="profile__info-number"></h3>
                     <p class="profile__info-description">
-                        Projects <br>
+                        Proyectos <br>
                     </p>
                 </div>
 
@@ -80,10 +75,10 @@
             <!-- Section TABS-->
             <ul class="filters__content">
                 <button class="filters__button filter-tab-active" data-target="#projects">
-                    Projects
+                    Proyectos
                 </button>
                 <button class="filters__button" data-target="#skills">
-                    Technologies
+                    Tecnologías
                 </button>
 
             </ul>
@@ -266,7 +261,7 @@
                         <div class="skills__box">
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-html5-line"></i>
+                                    <i class="fa-brands fa-html5"></i>
 
                                     <div>
                                         <h3 class="skills__name">HTML</h3>
@@ -275,7 +270,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-css3-line"></i>
+                                    <i class="fa-brands fa-css3"></i>
 
                                     <div>
                                         <h3 class="skills__name">CSS</h3>
@@ -284,7 +279,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-javascript-fill"></i>
+                                    <i class="fa-brands fa-js"></i>
 
                                     <div>
                                         <h3 class="skills__name">JavaScript</h3>
@@ -295,7 +290,7 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-reactjs-line"></i>
+                                    <i class="fa-brands fa-react"></i>
 
                                     <div>
                                         <h3 class="skills__name">React.js</h3>
@@ -304,7 +299,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-bootstrap-fill"></i>
+                                    <i class="fa-brands fa-bootstrap"></i>
 
                                     <div>
                                         <h3 class="skills__name">Bootstrap</h3>
@@ -313,7 +308,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-github-line"></i>
+                                    <i class="fa-brands fa-github"></i>
 
 
                                     <div>
@@ -331,7 +326,7 @@
                         <div class="skills__box">
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="fa-brands fa-java"></i>
 
                                     <div>
                                         <h3 class="skills__name">JAVA</h3>
@@ -340,7 +335,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-database-2-fill"></i>
+                                    <i class="fa-solid fa-database"></i>
 
                                     <div>
                                         <h3 class="skills__name">MySQL</h3>
@@ -349,8 +344,7 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
-
+                                    <i class="fa-brands fa-node"></i>
                                     <div>
                                         <h3 class="skills__name">Node.js</h3>
                                         <span class="skills__level">Basic</span>
@@ -360,7 +354,7 @@
 
                             <div class="skills__group">
                                 <div class="skills__data">
-                                    <i class="ri-database-2-fill"></i>
+                                    <i class="fa-solid fa-database"></i>
 
                                     <div>
                                         <h3 class="skills__name">SQLServer</h3>
@@ -369,16 +363,16 @@
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="fa-brands fa-npm"></i>
 
                                     <div>
-                                        <h3 class="skills__name">C# - ASP.NET</h3>
+                                        <h3 class="skills__name">NPM</h3>
                                         <span class="skills__level">Basic</span>
                                     </div>
                                 </div>
 
                                 <div class="skills__data">
-                                    <i class="ri-checkbox-circle-line"></i>
+                                    <i class="fa-brands fa-python"></i>
 
                                     <div>
                                         <h3 class="skills__name">Python</h3>
@@ -410,5 +404,4 @@
     <!-- MAIN JS-->
     <script src="./js/index.js"></script>
 </body>
-
 </html>
